--- a/flex/04-小兔鲜-确认订单/xiaotuxian/orders.html
+++ b/flex/04-小兔鲜-确认订单/xiaotuxian/orders.html
@@ -34,7 +34,41 @@
             </div>
         </div>
         <!-- 主体内容: 滑动查看 -->
+        <!-- 商品区域 -->
+        <div class="pannel goods">
+            <div class="pic">
+                <a href="#"><img src="./uploads/pic.png" alt=""></a>
+            </div>
+            <div class="info">
+                <h5>康尔贝 非接触式红外体温仪
+                    领券立减30元 婴儿级材质 测温</h5>
+                <p><span>粉色</span> <span>红色体温计</span></p>
+                <div class="price">
+                    <span class="red">￥<i>266</i></span>
 
+                    <span>￥299</span>
+                </div>
+            </div>
+            <div class="count">
+                <i class="iconfont icon-x"></i>
+                <span>1</span>
+            </div>
+        </div>
+        <!-- 快递信息 -->
+        <section class="rest">
+            <div>
+                <h5>配送方式</h5>
+                <p>顺丰快递</p>
+            </div>
+            <div>
+                <h5>配送方式</h5>
+                <p>顺丰快递</p>
+            </div>
+            <div>
+                <h5>配送方式</h5>
+                <p>顺丰快递</p>
+            </div>
+        </section>
         <!-- 底部支付: 固定定位 -->
         <div class="pay">
             <div class="left">
